--- a/admin_panel_with_server/admin_panel/src/App.css
+++ b/admin_panel_with_server/admin_panel/src/App.css
@@ -1,3 +1,12 @@
+.homepage{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  margin-top: 20vw;
+}
+
 .admin-login{
   display: flex;
   justify-content: center;
@@ -8,4 +17,67 @@
 }
 .admin-panel{
   margin: 0px 40px;
+  margin-top: 20px;
+}
+
+.dash-panel{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 100px);
+  grid-template-rows: repeat(1, 120px);
+  gap: 40px;
+}
+.dash-box{
+  color: white;
+  border-radius: 20px;
+  padding: 10px;
+  grid-column: span 2;
+}
+
+.form{
+  display: grid;
+  position: fixed;
+  top: 0;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+  background: #00000050;
+  width: 100vw;
+  height: 100vh;
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+}
+
+.form-container{
+  --btn-close-color: red;
+  padding: 30px;
+  border-radius: 30px;
+  background-color: white;
+}
+.form-container .heading{
+  margin-bottom: 30px;
+}
+
+.notification-container{
+  z-index: 99999;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  bottom: 0;
+  right: 0;
+  margin: 30px;
+}
+.notification{
+  background-color: #b4ffec;
+  padding: 10px;
+  min-width: 340px;
+  border-radius: 14px;
+}
+.notification.error{
+  background-color: rgb(255, 150, 150) !important;
+}
+.notification .header {
+  display: flex;
+  gap: 30px;
+  margin-bottom: 10px;
 }
