Email Function Update. and Front End Update. and automation server update

--- a/admin_panel_with_server/admin_panel/src/App.css
+++ b/admin_panel_with_server/admin_panel/src/App.css
@@ -55,6 +55,9 @@
   backdrop-filter: blur(3px);
   -webkit-backdrop-filter: blur(3px);
 }
+.form > div{
+  margin: 12px;
+}
 
 .form-container{
   --btn-close-color: red;
