Email Function Update. and Front End Update. and automation server update

--- a/admin_panel_with_server/admin_panel/src/App.css
+++ b/admin_panel_with_server/admin_panel/src/App.css
@@ -101,3 +101,8 @@
   justify-content: space-between;
   margin-bottom: 10px;
 }
+
+._404page{
+  text-align: center;
+  margin-top: calc(50vh - (2.5rem / 2));
+}
