--- a/admin_panel_with_server/resources/templates/emails/welcome_mail.html
+++ b/admin_panel_with_server/resources/templates/emails/welcome_mail.html
@@ -1,3 +1,5 @@
+
+
 <table id="u_body" style="border-collapse: collapse; table-layout: fixed; border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt; vertical-align: top; min-width: 320px; margin: 0 auto; background-color: #f7f8f9; width: 100%;" cellspacing="0" cellpadding="0">
 <tbody>
 <tr style="vertical-align: top;">
@@ -7,11 +9,17 @@
 <div style="border-collapse: collapse; display: table; width: 100%; height: 100%; background-color: transparent;">
 <div class="u-col u-col-100" style="max-width: 320px; min-width: 500px; display: table-cell; vertical-align: top;">
 <div style="height: 100%; width: 100% !important; border-radius: 0px; -webkit-border-radius: 0px; -moz-border-radius: 0px;"><br />
+    
 <table style="font-family: arial,helvetica,sans-serif;" border="0" width="100%" cellspacing="0" cellpadding="0">
 <tbody>
+    <tr>
+        <td style="margin-bottom: 20px;" align="center">
+            <img src="https://binzo.site/main_server/resources/images/binzo_logo.png" width="200px">
+        </td>
+    </tr>
 <tr>
 <td style="overflow-wrap: break-word; word-break: break-word; padding: 10px; font-family: arial,helvetica,sans-serif;" align="left">
-<h2 style="margin: 0px; line-height: 140%; text-align: center; word-wrap: break-word; font-size: 20px; font-weight: 400;">Hi {{full_name}}</h2>
+<h2 style="margin: 0px; line-height: 140%; text-align: center; word-wrap: break-word; font-size: 20px; font-weight: 400;"><strong>Hi {{full_name}}</strong></h2>
 </td>
 </tr>
 </tbody>
