--- a/admin_panel_with_server/admin_panel/src/App.css
+++ b/admin_panel_with_server/admin_panel/src/App.css
@@ -43,6 +43,7 @@
   margin: 0 !important;
 }
 .form{
+  --form-container-size: 90vh;
   display: grid;
   position: fixed;
   top: 0;
@@ -52,11 +53,14 @@
   background: #00000050;
   width: 100vw;
   height: 100vh;
+  max-width: 100vw;
+  max-height: 100vh;
   backdrop-filter: blur(3px);
   -webkit-backdrop-filter: blur(3px);
 }
 .form > div{
   margin: 12px;
+  max-height: var(--form-container-size);
 }
 
 .form-container{
@@ -68,6 +72,8 @@
 .mailform-container{
   width: 50vw;
   min-width: 400px;
+  max-height: var(--form-container-size);
+  overflow-y: scroll;
 }
 .form-container .heading{
   margin-bottom: 30px;
@@ -105,4 +111,24 @@
 ._404page{
   text-align: center;
   margin-top: calc(50vh - (2.5rem / 2));
+}
+
+
+
+/* Track */
+::-webkit-scrollbar{
+	width: 10px;
+  height: 10px;
+}
+/* width */
+::-webkit-scrollbar-track{
+  background-color: #00000070;
+  border-radius: 99px;
+}
+/* Handle */
+::-webkit-scrollbar-thumb{
+	background-color: rgb(241, 241, 241);
+  background-clip: content-box;
+  border: 2px solid transparent;
+	border-radius: 99px;
 }
