Stage: Development | Area: Admin Panel | Work: Finish the import bundle data function & ability to mark students as details checked and not. and start developing generate PDFs function.

--- a/admin_panel_with_server/admin_panel/src/App.css
+++ b/admin_panel_with_server/admin_panel/src/App.css
@@ -21,9 +21,10 @@
 
 .dash-panel{
   display: grid;
-  grid-template-columns: repeat(auto-fill, 100px);
-  grid-template-rows: repeat(1, 110px);
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  /* grid-template-rows: repeat(1, 110px); */
   gap: 40px;
+  justify-content: center;
 }
 .dash-box{
   display: grid;
