--- a/admin_panel_with_server/admin_panel/src/App.css
+++ b/admin_panel_with_server/admin_panel/src/App.css
@@ -1,4 +1,4 @@
-.homepage{
+.homepage {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -7,26 +7,29 @@
   margin-top: 20vw;
 }
 
-.admin-login{
+.admin-login {
   display: flex;
   justify-content: center;
 }
+
 .admin-login .form-container {
   width: 400px;
   margin-top: 20vh;
 }
-.admin-panel{
+
+.admin-panel {
   margin: 20px 40px;
 }
 
-.dash-panel{
+.dash-panel {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   /* grid-template-rows: repeat(1, 110px); */
   gap: 40px;
   justify-content: center;
 }
-.dash-box{
+
+.dash-box {
   display: grid;
   align-items: center;
   color: white;
@@ -35,14 +38,17 @@
   grid-column: span 2;
   text-align: center;
 }
-.dash-box > div{
+
+.dash-box>div {
   display: flex;
   justify-content: space-around;
 }
-.dash-box > div *{
+
+.dash-box>div * {
   margin: 0 !important;
 }
-.form{
+
+.form {
   --form-container-size: 90vh;
   display: grid;
   position: fixed;
@@ -58,36 +64,42 @@
   backdrop-filter: blur(3px);
   --webkit-backdrop-filter: blur(3px);
 }
-.form > div{
+
+.form>div {
   margin: 12px;
   max-height: var(--form-container-size);
 }
 
-.form-container{
+.form-container {
   --btn-close-color: red;
   padding: 30px;
   border-radius: 30px;
   background-color: white;
 }
-.mailform-container{
+
+.mailform-container {
   width: 50vw;
   min-width: 400px;
   max-height: var(--form-container-size);
   overflow-y: scroll;
 }
-.form-container .heading{
+
+.form-container .heading {
   margin-bottom: 30px;
 }
-.form-container.import-bundles{
+
+.form-container.import-bundles,
+.form-container.generate-pdfs {
   padding-left: 18px;
   padding-right: 12px;
 }
-.textarea-header{
+
+.textarea-header {
   display: flex;
   justify-content: space-between;
 }
 
-.notification-container{
+.notification-container {
   z-index: 99999;
   position: fixed;
   display: flex;
@@ -97,46 +109,60 @@
   right: 0;
   margin: 30px;
 }
-.notification{
+
+.notification {
   background-color: #b4ffec;
   padding: 10px;
   min-width: 340px;
   border-radius: 14px;
 }
-.notification.error{
+
+.notification.error {
   background-color: rgb(255, 150, 150) !important;
 }
+
 .notification .header {
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
 }
 
-._404page{
+._404page {
   text-align: center;
   margin-top: calc(50vh - (2.5rem / 2));
 }
 
-.MuiTableCell-head{
+.MuiTableCell-head {
   font-weight: 600 !important;
 }
 
+/* PDFs Generate Section */
+.btn-download-pdfs{
+ top: 40px;
+ transition: all 0.4s linear;
+}
+.btn-generate-pdfs{
+  top: 0;
+  transition: all 0.4s linear;
+}
 
 
 /* Track */
-::-webkit-scrollbar{
-	width: 10px;
+::-webkit-scrollbar {
+  width: 10px;
   height: 10px;
 }
+
 /* width */
-::-webkit-scrollbar-track{
+::-webkit-scrollbar-track {
   background-color: #00000070;
   border-radius: 99px;
 }
+
 /* Handle */
-::-webkit-scrollbar-thumb{
-	background-color: rgb(241, 241, 241);
+::-webkit-scrollbar-thumb {
+  background-color: rgb(241, 241, 241);
   background-clip: content-box;
   border: 2px solid transparent;
-	border-radius: 99px;
+  border-radius: 99px;
 }
