--- a/admin_panel_with_server/resources/templates/emails/welcome_mail.html
+++ b/admin_panel_with_server/resources/templates/emails/welcome_mail.html
@@ -14,7 +14,7 @@
 <tbody>
     <tr>
         <td style="margin-bottom: 20px;" align="center">
-            <img src="https://binzo.site/main_server/resources/images/binzo_logo.png" width="200px">
+            <img src="https://binzo.site/binzologo" width="200px">
         </td>
     </tr>
 <tr>
