Stage: Production | Area: Admin Panel | Work: Fix Bugs and Change Close Buttent and Few Fucntions in PDF Generating and Google Form Code

--- a/admin_panel_with_server/admin_panel/src/App.css
+++ b/admin_panel_with_server/admin_panel/src/App.css
@@ -98,7 +98,11 @@
   display: flex;
   justify-content: space-between;
 }
-
+.form .btn-close{
+  margin-left: auto;
+  padding: 5px !important;
+  background-color: orangered;
+}
 .notification-container {
   z-index: 99999;
   position: fixed;
